# MWE

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  README.md  common_commands  index.html  notes.txt
.github/workflows/: c-cpp.yml  docker-image.yml
CMakeUtils/: compiler_config.cmake
apps/: CMakeLists.txt  mwe.cpp
benchmarks/: CMakeLists.txt  basic_benchmark.cc
cuda_samples/: CMakeLists.txt
cuda_samples/UnifiedMemoryPerf/: CMakeLists.txt  commonDefs.hpp  helperFunctions.cpp  matrixMultiplyPerf.cu
examples/: CMakeLists.txt  mwe.cpp
examples/basic_cuda_sample/: CMakeLists.txt  basic_cuda_sample.cpp
examples/basic_sample/: CMakeLists.txt  basic_sample.cpp
include/: matrix.hpp
include/mwe/: matrix.hpp
scripts/: code_format.sh
src/: CMakeLists.txt  matrix.cpp
src/common/: CMakeLists.txt  matrix.cpp  utils.cpp
src/common/include/: matrix.hpp  utils.hpp
src/cuda/: CMakeLists.txt  matrix_cuda.cu
src/cuda/Common/: helper_cuda.h
src/cuda/include/: matrix_cuda.hpp
src/cuda/matrix/: CMakeLists.txt  matmul.cu
src/cuda/matrix/include/: matmul.hpp  matrix.hpp
tests/: CMakeLists.txt  basic_test.cc
tests/benchmarks/: CMakeLists.txt  basic_benchmark.cc
tests/common/: CMakeLists.txt  blob_files.cpp  matrix_test.cpp
tests/common/include/: blob_files.hpp  matrix_test.hpp
tests/unittests/: CMakeLists.txt  basic_test.cc
